# utd.tools

./: .gitignore  README.md  utdsetup
src/: buildenv.csh  buildenv.sh
src/automake/: Makefile.am  Makefile.in  aclocal.m4  config.mac.debug  config.mac.sdebug  config.macosx  configure  configure.ac  pgms  tcl
src/automake/m4/: ax_check_openssl.m4  libs.m4  utdtools.m4
src/automake/m4common/: libs.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  tcl.m4  tk.m4  utd.m4
src/extra/: extra.Darwin.tgz
src/ezlearn/embedded/: boolean.html.bak  boolean.html.orig  boolean_problems.html  boolean_problems.html.bak  boolean_problems.html.orig
src/ezlearn/ezlearn/: README  lessons.json
src/ezlearn/tcl/: boolean.tcl  iverilog.tcl  tclIndex
src/ezlearn/verilog/: alu.html  foo  modules.html  modules.html.bak  modules.html.orig
src/include/: python  sverilog  utd
src/include/base/: interp.h  tclstdin.h  utd.h
src/include/blt/: blt.h  bltInt.h  bltSwitch.h  bltWait.h
src/include/gui/: colors.h  gc.h  gui.h  interactive.h  open_gui.extra.h  open_gui.hpp  open_gui_int.h  tkDecls.h  utils.h
src/include/js/: jsapi.h  jsarray.h  jsatom.h  jsbool.h  jscntxt.h  jsconfig.h  jsdate.h  jsdbgapi.h  jsemit.h  jsfun.h  jsgc.h  jsinterp.h  jslock.h  jsmalloc.h  jsmath.h  jsnum.h  jsobj.h  jsopcode.def  jsopcode.h  jsparse.h  jsprvtd.h  jspubtd.h  jsregexp.h  jsscan.h  jsscope.h  jsscript.h  jsstr.h  jsxdrapi.h  prarena.h  prassert.h  prclist.h  prcpucfg.h  prdtoa.h  prhash.h  prlong.h  prmacos.h  prmalloc.h  prosdep.h  prpcos.h  prprintf.h  (+5 more)
src/include/tcl/: regcustom.h  regerrs.h  regex.h  regguts.h  tcl.h  tclCompile.h  tclDecls.h  tclFileSystem.h  tclIO.h  tclInt.h  tclIntDecls.h  tclIntPlatDecls.h  tclOO.h  tclOODecls.h  tclOOInt.h  tclOOIntDecls.h  tclParse.h  tclPlatDecls.h  tclPort.h  tclRegexp.h  tclStringRep.h  tclStringTrim.h  tclTomMath.h  tclTomMathDecls.h  tclTomMathInt.h  tclUnixPort.h  tclUnixThrd.h  tommath.h
src/include/tclpython/: interp.h  tclstdin.h
src/include/tix/: tix.h  tixDef.h  tixForm.h  tixGrData.h  tixGrid.h  tixHList.h  tixImgXpm.h  tixInt.h  tixPort.h  tixTList.h
src/include/tk/: default.h  ks_names.h  tk.h  tk3d.h  tkBusy.h  tkButton.h  tkCanvas.h  tkColor.h  tkDecls.h  tkEntry.h  tkFileFilter.h  tkFont.h  tkImgPhoto.h  tkInt.h  tkIntDecls.h  tkIntPlatDecls.h  tkIntXlibDecls.h  tkMenu.h  tkMenubutton.h  tkPlatDecls.h  tkPort.h  tkScale.h  tkScrollbar.h  tkSelect.h  tkText.h  tkUndo.h  tkUnixDefault.h  tkUnixInt.h  tkUnixPort.h  tknew.h
src/init/: setenv.csh  setenv.sh
src/libs/: tcl.old  tix  tk  tk.old
src/libs/Tix8.4.3/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  m4
src/libs/Tix8.4.3/generic/: patch  tix.h  tixDItem.c  tixDiStyle.c  tixForm.c  tixGrData.c  tixGrSort.c  tixGrUtl.c  tixGrid.c  tixHList.c  tixImgCmp.c  tixImgXpm.c  tixInit.c  tixNBFrame.c  tixPort.h  tixTList.c  tixUtils.c
src/libs/Tix8.4.3/m4/: tcl.m4  utd.m4
src/libs/Tix8.4.3/unix/: tixUnixDefault.h
src/libs/base/automake/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/libs/blt/: .gitignore
src/libs/blt/automake/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/libs/expect/: e.tgz  src
src/libs/gui/automake/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/libs/gui_c++/automake/: Makefile.am  Makefile.in  config.h.in  configure
src/libs/js/automake/: Makefile.am  Makefile.in  Ymakefile.bogus  c.bogus  configure  configure.ac
src/libs/prtable/automake/: Makefile.am  Makefile.in  configure  configure.ac
src/libs/sverilog/automake/: Makefile.am  Makefile.in  configure  configure.ac
src/libs/tcllib-1.20/: Makefile  config.status
src/libs/tcllib-tcllib_1_18/: Makefile  config.status  tcllib  utdtools.patch  utdtools_build
src/libs/tclpython/automake/: Makefile.am  Makefile.in  configure  configure.ac
src/libs/utd/: README.md
src/libs/utd/automake/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  configure.ac.71
src/modules/: modules.tgz
src/pgms/byacc/automake/: Makefile.am  Makefile.in  aclocal.m4  config.guess  config.h.in  configure  configure.ac  ltmain.sh  m4
src/pgms/cometFlow/: .gitignore  README.md
src/pgms/cometFlow/automake/: Makefile.am  Makefile.in  configure  configure.ac
src/pgms/cometTix/: tcl
src/pgms/cometTix/automake/: Makefile.am  Makefile.in  configure  configure.ac
src/pgms/htmldoc-1.9.9/: Makedefs  Makefile  config.h  config.status
src/pgms/valgrindp/automake/: Makefile.am  Makefile.in  aclocal.m4  config.sub  configure  configure.ac
src/pgms/yosys-abc/: Dockerfile
src/pgms/yosys-abc/automake/: Makefile.in  aclocal.m4  configure  configure.ac
src/pgms/yosys-abc/automake/m4/: tcl.m4  utd.m4
src/tcl/: pkgIndex.tcl  tablelist
src/tcl/autotest/: Makefile  README  autograde  autograde.tcl  autotest  autotest.tcl  d  d2  f  privilege.tcl  problem1.c  solutions.sql  t  tclIndex  tests.db
src/tcl/banks/: banks.tcl  membanks
src/tcl/cacademic/: README  cadence  cadence.html  cadence.tcl  calc_expired  calc_expired.tcl  columns  columns.tcl  create_db  foo.html  index.html  index.html.tmpl  mktime  rename_table  rename_table.tcl  requested  requested.tcl  setenv.sh  students.vars  tmp
src/tcl/cache/: cache.tcl  cachepractice  draw.tcl  dump.tcl  example  fib.S  iconglobal  login.tcl  prog.S  prog.mips.S  prog.tmp  regfile.tcl  select.tcl  tclIndex  way.tcl
src/tcl/cometTix/: run.tcl  run2.tcl  run3.tcl  run4.tcl  run5.tcl  test.py  vars.tcl
src/tcl/custom_exams/: Makefile  README  envelope.data
src/tcl/gui/: colors.tcl  exit.tcl  flow.tcl  fonts.tcl  fselect.tcl  main.tcl  null_window.tcl  symbolic.tcl  tclIndex  tix.tcl
src/tcl/logic/: init.tcl  yosys_script.tcl
src/tcl/markdown/: mconvert.tcl
src/tcl/memory/: memory.tcl  memory.tex  mempractice
src/tcl/quiztool/: README  icuname.m64  layout.css  utd_server.tcl  utdquiztool
src/tcl/reg_programming/: reg_programming  reg_programming.tcl
src/tcl/tcludp/: udptest.tcl
src/tcl/tester/: dumpfile  fib.c  iconbar.tcl  (+2 more)
(+3108 files in other folders)
