AC_PREREQ([2.69])
AC_INIT([utdtools], [1.00], [bill-swartz@utdallas.edu])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIRS([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
UTD_AC_PATH_XTRA

UTDTOOLS_CHECK_ENVIRONMENT
UTDTOOLS_BUILD_ENV
# Here is where we set the overall version.
AC_PREFIX_DEFAULT($UTDTOOLSINSTALLDIR/v1.0.0)

UTDTOOLS_ENABLE_THREADS
UTDTOOLS_ENABLE_SHARED
UTDTOOLS_ENABLE_DEBUG
UTDTOOLS_ENABLE_GRAPHICS
UTDTOOLS_ENABLE_AUTOTOOLS
UTDTOOLS_ENABLE_MEMDEBUG


AC_CHECK_PROG(MCC,imcc,imcc,"$CC")
AX_CHECK_OPENSSL


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

UTDTOOLS_MESSAGES
